The first commit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,23 @@
-<ion-app>
-  <ion-router-outlet></ion-router-outlet>
-</ion-app>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Ionic 4 Barcode Scanner</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content padding>
+  <ion-input type="text" [(ngModel)]="encodedData"></ion-input>
+  <button ion-button (click)="encodedText()">Encode Text</button>
+
+  <h1>Click Button To Scan</h1>
+
+  <button ion-button round (click)="scanCode()">Scan Code</button>
+
+  <div *ngIf="scannedData">
+    <p>
+      Scanned Code Text : <b>{{ scannedData['text'] }}</b>
+    </p>
+    <p>
+      Scanned Code Format : <b>{{ scannedData['format'] }}</b>
+    </p>
+  </div>
+</ion-content>
